fixing overflow-x

--- a/app/_components/Slant/index.scss
+++ b/app/_components/Slant/index.scss
@@ -14,6 +14,7 @@
   }
 
   &__bg {
+    overflow: hidden;
     position: absolute;
     height: calc(100% + $padding);
     width: 100%;
